# capstone-project-NCAA-Volleyball

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  test_config.py
outputs/: collection_log.csv  discovered_roster_urls.csv
src/: clean_rosters.py  collect_rosters.py  collect_schools.py  config.py  discover_roster_urls.py  enrich_schools.py  filter_geographic_players.py  scrape_rosters.py  validate_sites.py
src/collectors/: __init__.py  browser.py  common.py  labeled_cards.py  modern_cards.py  parser.py  sidearm.py  tables.py  visible_text.py
