[project]
name = "capstone-project-ncaa-volleyball"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "lxml>=6.1.1",
    "pandas>=3.0.3",
    "playwright>=1.61.0",
    "requests>=2.34.2",
    "selenium>=4.46.0",
    "tqdm>=4.68.4",
]
